# assimp

./: CMakeLists.txt
cmake/: Config.cmake.in
code/: BaseImporter.cpp  BlenderTessellator.h  CMakeLists.txt  FIReader.hpp  IFCGeometry.cpp  IFCLoader.cpp  IFCOpenings.cpp  Q3BSPZipArchive.cpp  Q3BSPZipArchive.h  STEPFileEncoding.cpp  X3DImporter.cpp  irrXMLWrapper.h
test/: CMakeLists.txt
tools/assimp_cmd/: CMakeLists.txt
